# ChangeLog for dev-python/pysendfile
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pysendfile/ChangeLog,v 1.2 2014/03/31 20:24:55 mgorny Exp $

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pysendfile-2.0.0.ebuild:
  Add support for the new PyPy slotting.

*pysendfile-2.0.0 (14 Nov 2013)

  14 Nov 2013; Ian Delaney <idella4@gentoo.org> +metadata.xml,
  +pysendfile-2.0.0.ebuild:
  New dep to testsuite of glance, ebuild prepped by me