@@ -1,26 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST pysendfile-2.0.0.tar.gz 11155 SHA256 b7b747e47f2b1b16942d8db9139e0f0f70546ca80a06460bd5abfdc7a1bca957 SHA512 8af758b5a78de82f393bc6aa395717423e6a888b29d396a7491a7579b9e278b245ce26a7653aa0009c48f56180673e2f2a85306d253eff04b75aebffb529c534 WHIRLPOOL 37c0a2275d2a9a6d034f905e55809f3a6ba99448bfe4a6c5a6690613ee90e824b67f15a7e8fde261b2c06b7fcaab524c0a91b25494d6f49ed26b64b44d14d868
-EBUILD pysendfile-2.0.0.ebuild 759 SHA256 4090931f7eb67c83469efe374377dc0203807bbe143f103ed42bf967f987f6c7 SHA512 a57fb9d62b82deaab9c19e877ab63356577157b2163f402cc9ae9279b4279c90859d8a77b6371afc20b94308982e7cd5325d4f6e7dab398989f799751c322ce7 WHIRLPOOL 2baf6eb0ce5b8851c46d31884c87f741a8081b59d6da09f8ed8e9eedbfecbd275331e31b5da0b1c4fd12527c39bb40915faf4f57d0520b4814da234f8ea19aea
-MISC ChangeLog 511 SHA256 e0d98963a94699a279fe90bc266fa07f6d7000c17429ec4228535317f7e66088 SHA512 a2dd465305058be20da916291ebee41053211f1c4c20e8ac8d8e9c8eb18c9ca30a45811af2296d5a3765a2cd0c340e7104b30c4c9121beae3d0723647693c278 WHIRLPOOL 04fd8db256825dc7bc59caf8d93a845f56e3681ef17f8c20b8b5c43e544107b1ac0e1e8f011b0d1ddc41eee9f9cacd81bc8d3706871efbea4f782d3638247985
+DIST pysendfile-2.0.1.tar.gz 19315 SHA256 510a414b270986fba3c79cb76d90a4c910c701bfb43ff983a5d4e92846050e17 SHA512 d6ee08eb251fac30c90a9ee829fd992f3620697eef2893ced5a2c6273486c3c5fd35c70962585a8d747d578817391f91c929bfeeba8c4485d52a15748229ca9c WHIRLPOOL a1f9a54ff2f0111d3c62f3ec17490241270d711b8529b701d27b12f7aa607c13c86ae7e2910770b8626b86909c9943e3ab8395676c5c09eff52274165ab64641
+EBUILD pysendfile-2.0.1.ebuild 652 SHA256 6a5d4a0cf79bfd117106b97450016df88601521ee052d2f6c684691500121e5e SHA512 efd0325dea1da80e7cc49ccee771cbbe7d68692efb6cca3ec92688c32364af3064af99fba3d555a43402fc21674bbcffc4c147167a45546aba90cc5582bfa126 WHIRLPOOL ebe82fd877762b17fa67d9dd6e86bab2f1ada330eac113aff88b85c919889ca508a7bedbb63fb0d634596b076e7ce8df1a54572c55f0e19bb8482d3972ef1e8e
+MISC ChangeLog 743 SHA256 cf6fceadb1e3de6cb061f8b5d0edfdbd86901700b686087ac7192ff5f729a5d0 SHA512 eaeae691d671754dcedf451e0939feda09bd27c19a9b20e0839066f575f9db6306247f116b5fe9a44dc0ba680bb8e606d2360412f90642ba8df1c81f7220d7d1 WHIRLPOOL ebdd31b50dd8dc26db3cc359bdd2329dca5131048ec3f878a6fe885854b8cf6a3c2e10fa7967276457c0bb0d72b850b15c038d87737b6611ca49e69c84ff1328
 MISC metadata.xml 170 SHA256 613f5f63dffc78a75b8e12bd0df1ba7f27afccc7532b809c6ed14de1007bdc25 SHA512 2de67dccf7cc4fe6837c3efb996e16621dc7ddbf58ac725c5f57d0bc8c64036a2adab320f124da571d31bdbedd9aca46aa867a9186b7cee8500855360b6dfb5e WHIRLPOOL 7aa8b64e7a8fa384484d69f4fa024536e537ce70ba49c738f52977912418e2ada990a4626072b0f2c56dedc743a0c81800db6ea271ebd18c87542ec2ba6dd4ed
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTOc8gXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOsT8P/RiKZJBKAhLXwbvIah7U1c6X
-NX0poCDrFY4k6UojfZi4vmxcNr8jXi1trU8BtS6DKrwtaZUkOMJFAT9Zkte56HHn
-8cHXCRjRqOkDOia+k3C6Sxi8LQL9yCui4VmoOZaYTnWgJgr/nQDNoY17+HflyzvD
-FMAGFL3/xjATbGFsSeQq4zRrA5JEtfxS1YRaPdg6jE+LH2btLmAI0olo5zJ1Ca4x
-TIBa+aeMkSfFgTamQQXRqhYsDy9RVLRKsIDOtGgVLugbdlBML+ZjZ8e6FZNv/DeE
-vI72p776vtj83AH24k1S1+M+BBnqs5Ugm+XvrWGKlvmBwx7iqDSabqgrx1v6k501
-Jd61ZZHnuMs6Hg4zKvqugAFRSDTPIf3xMhUmOIb3qehiFomaaxdqztxU/RadMbV4
-meL50va3NVxJV0+3FHJfotmcJr1FA48PzvYC8VCN7uZFhqp2yFWvz71u2kuvqUjo
-dDdCg1SPgUJVRWqVU7bXn/6f0yJTbT9wqlTraKBTvJeVmgPklSK0ovUZBQyxDwV7
-Rz8busCRs8t9WMlyI47JC/rBVS5Ow6Ym5mXrmNMHGWKdiCy8iLWBIYHZ1377L8OA
-C2uUZ0wWUwXmfG4srW2oaNYLiAiJRgQ/+fed3VVyvL1ZiYJCKIc5gLi74Gb6vJZi
-dpAklmB62uRcrwwgTYGl
-=huhd
+iEYEAREIAAYFAlUI8g4ACgkQso7CE7gHKw0m6QCfdnUTNHkbkWLvg0WdIFvEKMlz
+lKcAniFmm/qrBJ2pSX3n6PuZ/NmcGKRJ
+=EZ8P
 -----END PGP SIGNATURE-----
