@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/pysendfile
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pysendfile/ChangeLog,v 1.2 2014/03/31 20:24:55 mgorny Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pysendfile/ChangeLog,v 1.3 2015/03/18 03:33:18 idella4 Exp $
+
+*pysendfile-2.0.1 (18 Mar 2015)
+
+  18 Mar 2015; Ian Delaney <idella4@gentoo.org> +pysendfile-2.0.1.ebuild,
+  -pysendfile-2.0.0.ebuild:
+  bump; switch SRC_URI to pypi, remove test phase, see comment in ebuild, rm
+  outdated ebuild
 
   31 Mar 2014; Michał Górny <mgorny@gentoo.org> pysendfile-2.0.0.ebuild:
   Add support for the new PyPy slotting.
